2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	foreach.
	* src/uasynccommand.cc, src/uasyncregister.cc, src/uatcandidate.cc,
	* src/ueventcompound.cc, src/ueventhandler.cc, src/ueventinstance.cc:
	Use it.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Fix CPP typo.
	* src/userver.cc: here.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	More aibo shielding.
	* src/memorymanager/memorymanager.cc: here.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	More Aibo shielding.
	* src/uconnection.cc: here.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	More Aibo protections.
	* src/userver.cc: here.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Use libport's config.h to detect OpenR.
	* include/kernel/blockmemorymanager.hh, include/kernel/uconnection.hh,
	* include/kernel/userver.hh, src/uconnection.cc, src/userver.cc:
	Include libport/config.h.
	Use LIBPORT_URBI_ENV_AIBO.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	foreach.
	* src/ucommand.cc: More of it.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Fix error message.
	* src/parser/bison/ugrammar.y: Report by JCB.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Use threads only if !OPENR.
	* include/kernel/blockmemorymanager.hh, include/kernel/uconnection.hh,
	* include/kernel/userver.hh, src/uconnection.cc, src/userver.cc:
	Do it.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Use BOOST_FOREACH.
	* src/ucommand.cc: At random places.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Reject for&.
	* src/parser/bison/ugrammar.y: here.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	libport use.
	WARNING: Apparently someone decided to use libport/Makefile.am,
	which is wrong afai can remember...  Now both liburbi *and* the
	kernel will want to install libport.  Well done pal.
	* Makefile.am (SVN_EXTERNALS): Add libport so that libport-ci
	works as expected.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Use BOOST_FOREACH.